fix : index.html

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <meta name='format-detection' content='telephone=no'>
+  <script src='assets/main.js'></script>
 </head>
 
 <div class='root'></div>
